<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/layoutRowA"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strClear"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

            <Space
                android:id="@+id/spcClearParentheses"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnParentheses"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strParentheses" />

            <Space
                android:id="@+id/spcParenthesesExponent"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnExponent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Space
                android:id="@+id/spcExponentDivide"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strDivide"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRowB"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSeven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strSeven" />

            <Space
                android:id="@+id/spcSevenEight"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnEight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strEight" />

            <Space
                android:id="@+id/spcEightNine"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnNine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strNine" />

            <Space
                android:id="@+id/spcNineMultiply"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnMultiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strMultiply" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRowC"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFour"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strFour" />

            <Space
                android:id="@+id/spcFourFive"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnFive"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strFive" />

            <Space
                android:id="@+id/spcFiveSix"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnSix"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strSix" />

            <Space
                android:id="@+id/spcSixSubtract"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnSubtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strSubtract" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRowD"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOne"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strOne" />

            <Space
                android:id="@+id/spcOneTwo"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnTwo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strTwo" />

            <Space
                android:id="@+id/spcTwoThree"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnThree"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strThree" />

            <Space
                android:id="@+id/spcThreeAdd"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strAdd" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRowE"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSign"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strSign" />

            <Space
                android:id="@+id/spcSignZero"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnZero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strZero" />

            <Space
                android:id="@+id/spcZeroDecimal"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnDecimal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strDecimal" />

            <Space
                android:id="@+id/spcDecimalEquals"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnEquals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/strEquals" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>